# festapick-crawling

./: .gitignore  app.py  main.py  pyproject.toml
crawler/: daegu_crawler.py  ulsan_cralwer.py
database/: database_config.py
domain/: models.py
repository/: festival_repository.py
